--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,6 @@ rand = "0.8.5"
 criterion = { version = "0.3.5", features = ["html_reports"] }
 
 [[bench]]
-#name = "perf_naive"
-name = "perf"
+name = "perf_pack_naive"
+#name = "perf_pack_tight"
 harness = false
